--- a/src/Microsoft.AspNetCore.Blazor.Electron.JS/package.json
+++ b/src/Microsoft.AspNetCore.Blazor.Electron.JS/package.json
@@ -9,8 +9,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/emscripten": "0.0.31",
-    "ts-loader": "^4.4.1",
+    "@types/base64-arraybuffer": "^0.1.0",
+    "base64-arraybuffer": "^0.1.5",
+    "electron": "^3.0.4",
+    "ts-loader": "^5.2.2",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^2.9.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8"
