--- a/samples/BlectronSample/BlectronSample.csproj
+++ b/samples/BlectronSample/BlectronSample.csproj
@@ -5,11 +5,12 @@
     <BlazorLinkOnBuild>false</BlazorLinkOnBuild>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <DefaultItemExcludes>${DefaultItemExcludes};node_modules\**;package-lock.json</DefaultItemExcludes>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.7.0-preview1-20181015.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.7.0-electron-t000" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor" Version="0.7.0-preview1-20181016.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.7.0-preview1-20181016.1" />
   </ItemGroup>
 
   <ItemGroup>
