--- a/src/BlazorElectron.JS/package.json
+++ b/src/BlazorElectron.JS/package.json
@@ -9,6 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@dotnet/jsinterop": "^0.1.1",
     "@types/base64-arraybuffer": "^0.1.0",
     "base64-arraybuffer": "^0.1.5",
     "electron": "^3.0.4",
