--- a/src/BlazorElectron.JS/tsconfig.json
+++ b/src/BlazorElectron.JS/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "../../modules/blazor/src/Microsoft.AspNetCore.Blazor.Browser.JS/tsconfig.json",
+  "extends": "../../upstream/aspnetcore/browser.js/tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@browserjs/*": ["../../modules/blazor/src/Microsoft.AspNetCore.Blazor.Browser.JS/src/*"]
+      "@browserjs/*": [ "../../upstream/aspnetcore/browser.js/*" ]
     }
   }
 }
