--- a/samples/BlectronSample/BlectronSample.csproj
+++ b/samples/BlectronSample/BlectronSample.csproj
@@ -3,16 +3,17 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <BlazorLinkOnBuild>false</BlazorLinkOnBuild>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
     <DefaultItemExcludes>${DefaultItemExcludes};node_modules\**;package-lock.json</DefaultItemExcludes>
+    <BlazorVersion>3.0.0-preview3-19122-14</BlazorVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Browser" Version="0.7.0-preview1-20181017.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="0.7.0-preview1-20181017.2" IncludeAssets="Runtime" /> <!-- Don't include build info because it interferes with Razor tooling -->
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="0.7.0-preview1-20181017.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Server" Version="$(BlazorVersion)" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Build" Version="$(BlazorVersion)" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
