Rename all projects

--- a/samples/ComponentsElectronSample/ComponentsElectronSample.csproj
+++ b/samples/ComponentsElectronSample/ComponentsElectronSample.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\BlazorElectron\BlazorElectron.csproj" />
+    <ProjectReference Include="..\..\src\Microsoft.AspNetCore.Components.Electron\Microsoft.AspNetCore.Components.Electron.csproj" />
   </ItemGroup>
 
   <Target Name="EnsureNpmRestored" BeforeTargets="CoreBuild" Condition="!Exists('node_modules')">
