--- a/src/Microsoft.AspNetCore.Components.Electron/Microsoft.AspNetCore.Components.Electron.csproj
+++ b/src/Microsoft.AspNetCore.Components.Electron/Microsoft.AspNetCore.Components.Electron.csproj
@@ -14,12 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BlazorElectron.JS\BlazorElectron.JS.csproj" ReferenceOutputAssembly="false" />
+    <Content Include="..\Microsoft.AspNetCore.Components.Electron.JS\dist\**" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="js\**" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="..\BlazorElectron.JS\dist\**" CopyToOutputDirectory="PreserveNewest" />
-    <Content Include="js\**" CopyToOutputDirectory="PreserveNewest" />
+    <ProjectReference Include="..\Microsoft.AspNetCore.Components.Electron.JS\Microsoft.AspNetCore.Components.Electron.JS.csproj" />
   </ItemGroup>
 
 </Project>
