--- a/src/Microsoft.AspNetCore.Components.Electron.JS/Microsoft.AspNetCore.Components.Electron.JS.csproj
+++ b/src/Microsoft.AspNetCore.Components.Electron.JS/Microsoft.AspNetCore.Components.Electron.JS.csproj
@@ -20,7 +20,7 @@
     <Exec Command="npm install" />
   </Target>
 
-  <Target Name="RunWebpack" AfterTargets="ResolveReferences" Inputs="@(WebpackInputs)" Outputs="dist\blazor.electron.js" DependsOnTargets="EnsureNpmRestored">
+  <Target Name="RunWebpack" AfterTargets="ResolveReferences" Inputs="@(WebpackInputs)" Outputs="dist\components.electron.js" DependsOnTargets="EnsureNpmRestored">
     <RemoveDir Directories="dist" />
     <Exec Command="npm run build:debug" Condition="'$(Configuration)' == 'Debug'" />
     <Exec Command="npm run build:production" Condition="'$(Configuration)' != 'Debug'" />
