--- a/samples/ComponentsElectronSample/ComponentsElectronSample.csproj
+++ b/samples/ComponentsElectronSample/ComponentsElectronSample.csproj
@@ -6,6 +6,7 @@
     <LangVersion>7.3</LangVersion>
     <DefaultItemExcludes>${DefaultItemExcludes};node_modules\**;package-lock.json</DefaultItemExcludes>
     <ComponentsVersion>3.0.0-preview3-19122-14</ComponentsVersion>
+    <RestoreAdditionalProjectSources>https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json;</RestoreAdditionalProjectSources>
   </PropertyGroup>
 
   <ItemGroup>
