--- a/src/Microsoft.AspNetCore.Components.Electron/Microsoft.AspNetCore.Components.Electron.csproj
+++ b/src/Microsoft.AspNetCore.Components.Electron/Microsoft.AspNetCore.Components.Electron.csproj
@@ -1,25 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <ComponentsVersion>3.0.0-preview3-19122-14</ComponentsVersion>
-    <PackageVersion>$(ComponentsVersion)</PackageVersion>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
+    <ComponentsVersion>3.0.0-preview3-19122-14</ComponentsVersion>
+    <PackageVersion>$(ComponentsVersion)</PackageVersion>
+    <RestoreAdditionalProjectSources>https://dotnet.myget.org/F/aspnetcore-dev/api/v3/index.json;</RestoreAdditionalProjectSources>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ElectronNET.API" Version="0.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Server" Version="$(ComponentsVersion)" PrivateAssets="All" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="$(ComponentsVersion)" />
+    <ProjectReference Include="..\Microsoft.AspNetCore.Components.Electron.JS\Microsoft.AspNetCore.Components.Electron.JS.csproj" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
   <ItemGroup>
     <Content Include="..\Microsoft.AspNetCore.Components.Electron.JS\dist\**" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="js\**" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.AspNetCore.Components.Electron.JS\Microsoft.AspNetCore.Components.Electron.JS.csproj" />
   </ItemGroup>
 
 </Project>
